css: Prevent long explanation lines from wrapping.
This should make them more readable on small screens.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+.plugin-tasks-query-explanation{
+    /* Prevent long explanation lines wrapping, so they are more readable,
+       especially on small screens.
+
+       A horizontal scroll bar will be displayed, if the explanation
+       is too wide to fit.
+     */
+    --code-white-space: pre;
+}
+
 .tasks-count {
     color: var(--text-faint);
     padding-left: 20px;
